[package]
name = "test-ra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "28a93bbe394ab85f5f4c8f53221d22c55679eda2" }
framework = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "28a93bbe394ab85f5f4c8f53221d22c55679eda2" }
cached-packages = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "28a93bbe394ab85f5f4c8f53221d22c55679eda2" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
hex = "0.4.3"
bcs = "0.1.3"
serde = "1.0.137"
serde_json = "1.0.81"

# aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "8e1f0947e000c72ecd369cd67fccde587a06f0c0" }
